chore: use Prettier

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "web-framework-plugins",
   "private": true,
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  }
 }
