chore: use Yarn Workspaces

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-framework-plugins",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": [],
   "devDependencies": {
     "commitlint": "^11.0.0",
     "husky": "^4.3.6",
